themes/har/source/css/photos.scss
@use "lib/animation";
@use "lib/color";
@use "lib/layout";
@use "lib/state";

.photo-gallery {
  display: flex;
  flex-flow: wrap;

  margin: -0.25rem;
}

.photo-link {
  display: flex;
  position: relative;
  flex: auto;
  min-width: 320px;
  max-width: 640px;
  width: 480px;
  aspect-ratio: 16/9;

  margin: 0.25rem;
  border-radius: 1rem;

  @include state.link($visited: null, $radius: 1rem);

  &::before {
    content: "";
    @include layout.fit;

    border-radius: inherit;

    box-shadow: 2px 2px 1rem color.$border, 0 0 0.5rem 1px color.$border;
    opacity: 0;
    transition: animation.transition(opacity);
  }

  &:hover::before {
    opacity: 1;
  }

  img {
    border-radius: inherit;
    width: 100%;
    height: 100%;
  }
}

